# Playgrounds

./: .gitignore
Playgrounds.hsproj/: .uuid  Cards.hs  Debug.hs  Equiv.hs  Flip.hs  Free.hs  Mat.hs  Playgrounds.cabal  Playgrounds.hs  _Cards.hsplay  _Equiv.hsplay  _Flip.hsplay  _Playgrounds.hsplay
Playgrounds.hsproj/Assignments/: HS2.hs  HS3.hs  HS4.hs  _HS3.hsplay  _HS4.hsplay
Playgrounds.hsproj/Control/: Replicate.hs
Playgrounds.hsproj/Control/Applicative/: Alternative.hs  Janus.hs  _Alternative.hsplay  _Janus.hsplay
Playgrounds.hsproj/Control/Monad/: BinOdds.hs  Complexity.hs  Constrained.hs  FastWriter.hs  FastWriterT.hs  IState.hs  ListT.hs  Loops.hs  Odds.hs  Private.hs  Prob.hs  ProbTrans.hs  Restricted.hs  Source.hs  Split.hs  Tardis.hs  Undo.hs  _BinOdds.hsplay  _ListT.hsplay  _Private.hsplay  _Prob.hsplay  _ProbTrans.hsplay
Playgrounds.hsproj/Control/Monad/Church/: Source.hs  State.hs  Writer.hs  _Source.hsplay
Playgrounds.hsproj/Control/Monad/Prob/: Cons.hs  List.hs  Map.hs  Tree.hs  _Tree.hsplay
Playgrounds.hsproj/Data/: Bool.hs  BoolQuery.hs  BoolSimplify.hs  Converge.hs  Convolutions.hs  Deque.hs  Digit.hs  DrawTree.hs  Expr.hs  FancyExpr.hs  FoldTricks.hs  FuncChain.hs  GenFold.hs  HS2048.hs  HetList.hs  NonEmpty.hs  OptArg.hs  PList.hs  Para.hs  RList.hs  Resources.hs  Ring.hs  ST.hs  Safe.hs  Semigroup.hs  Semiring.hs  StrictPair.hs  Tree.hs  Unfold.hs  Uniques.hs  _BoolSimplify.hsplay  _Convolutions.hsplay  _Deque.hsplay  _Digit.hsplay  _FoldTricks.hsplay  _HS2048.hsplay  _RList.hsplay  _Ring.hsplay  _Safe.hsplay  _Semiring.hsplay  (+2 more)
Playgrounds.hsproj/Data/Church/: Binary.hs  Bool.hs  Either.hs  LeftFold.hs  List.hs  Maybe.hs  Nat.hs  Pair.hs  Parser.hs  Prelude.hs  These.hs  VecUnfold.hs  _Binary.hsplay  _Bool.hsplay  _List.hsplay  _Nat.hsplay
Playgrounds.hsproj/Data/Coerce/: Helpers.hs  _Helpers.hsplay
Playgrounds.hsproj/Data/Foldable/: Multi.hs  Safe.hs  Tricks.hs  _Multi.hsplay
Playgrounds.hsproj/Data/Function/: Blackbird.hs  Chain.hs  Compose.hs  Operators.hs  Utils.hs  _Compose.hsplay
Playgrounds.hsproj/Data/Functor/: Recursive.hs
Playgrounds.hsproj/Data/Knots/: Rack.hs
Playgrounds.hsproj/Data/Scott/: List.hs
Playgrounds.hsproj/Data/Semiring/: Free.hs  Map.hs  Numeric.hs  Test.hs  _Free.hsplay  _Map.hsplay  _Numeric.hsplay
Playgrounds.hsproj/Data/Strict/: Counter.hs  Maybe.hs  Pair.hs
Playgrounds.hsproj/Data/Traversable/: Extras.hs
Playgrounds.hsproj/HS99/: HS1_10.hs  _HS1_10.hsplay
Playgrounds.hsproj/Lifted/: Free.hs
Playgrounds.hsproj/Numeric/: Bases.hs  Countdown.hs  Decimal.hs  Digit.hs  Small.hs  _Countdown.hsplay  _Decimal.hsplay  _Small.hsplay
Playgrounds.hsproj/Test/: Function.hs
Playgrounds.hsproj/Text/: ExprPrint.hs  Pad.hs  Parse.hs  _ExprPrint.hsplay  _Pad.hsplay  _Parse.hsplay
Playgrounds.hsproj/Type/: List.hs
play/: play.cabal
play/src/: Lib.hs
play/test/: Spec.hs
