name: Playgrounds
version: 1.0
cabal-version: 1.11
build-type: Simple
license: MIT
stability: experimental
author: Donnacha Oisín Kidney
data-files:
    dict.txt
x-ghc-framework-version: 7.10.3-5.18-2
x-last-ide-version: HfM1.3.2
Executable Playgrounds
  main-is: Playgrounds.hs
  buildable: True
  build-depends:
      bytestring -any,
      random -any,
      mtl -any,
      semigroups -any,
      transformers -any,
      base -any,
      lens -any,
      containers -any,
      QuickCheck -any,
      mmorph -any
  other-modules:
      Assignments.HS2
      Assignments.HS4
      Assignments.HS3
      Data.Semiring
      Data.Church.List
      Data.Church.Bool
      Data.Church.Nat
      Data.Church.Maybe
      Data.Church.Pair
      Data.Church.Binary
      Data.Traversable.Extras
      Data.Deque
      Data.Safe
      Data.Functor.Recursive
      Data.Unfold
      Data.RList
      Data.Function.Chain
      Data.Function.Operators
      Data.Function.Utils
      Data.Foldable.Tricks
      Data.StrictPair
      Data.Resources
      Data.Scott.List
      Data.Semiring.Map
      Data.Semiring.Test
      Data.Semiring.Numeric
      Data.Semiring.Free
      Debug
      Flip
      Text.ExprPrint
      Text.Parse
      Type.List
      Control.Applicative.Alternative
      Control.Monad.Church.State
      Control.Monad.Church.Writer
      Control.Monad.Prob.List
      Control.Monad.Prob.Tree
      Control.Monad.Prob.Map
      Control.Monad.Undo
      Control.Monad.Complexity
      Control.Monad.Constrained
      Control.Monad.Tardis
      Control.Monad.Private
      Test.Function
      Cards
      Numeric.Small
      Numeric.Bases
