name: Playgrounds
version: 1.0
cabal-version: 1.11
build-type: Simple
license: MIT
stability: experimental
author: Donnacha Oisín Kidney
data-files:
    dict.txt
x-ghc-framework-version: 7.10.3-6.29-1
x-last-ide-version: HfM1.4.0
Executable Playgrounds
  main-is: Playgrounds.hs
  buildable: True
  build-depends:
      bytestring -any,
      random -any,
      mtl -any,
      semigroups -any,
      transformers -any,
      base -any,
      containers -any,
      QuickCheck -any,
      lens -any,
      mmorph -any,
      profunctors -any
  other-modules:
      Assignments.HS2
      Assignments.HS4
      Assignments.HS3
      Debug
      Text.ExprPrint
      Text.Parse
      Flip
      Type.List
      Control.Applicative.Alternative
      Control.Monad.Church.State
      Control.Monad.Church.Writer
      Control.Monad.Prob.List
      Control.Monad.Prob.Cons
      Control.Monad.Prob.Tree
      Control.Monad.Prob.Map
      Control.Monad.Undo
      Control.Monad.Complexity
      Control.Monad.Constrained
      Control.Monad.Tardis
      Control.Monad.Private
      Numeric.Small
      Numeric.Bases
      Mat
      Data.Semiring
      Data.Church.List
      Data.Church.Either
      Data.Church.Bool
      Data.Church.LeftFold
      Data.Church.Nat
      Data.Church.Pair
      Data.Church.These
      Data.Church.Maybe
      Data.Church.VecUnfold
      Data.Church.Binary
      Data.Coerce.Helpers
      Data.Convolutions
      Data.Traversable.Extras
      Data.Deque
      Data.Unfold
      Data.Function.Chain
      Data.Function.Operators
      Data.Function.Utils
      Data.RList
      Data.Foldable.Tricks
      Data.Foldable.Safe
      Data.Strict.Counter
      Data.Strict.Maybe
      Data.Strict.Pair
      Data.Resources
      Data.Semiring.Map
      Data.Semiring.Test
      Data.Semiring.Numeric
      Data.Semiring.Free
      Data.Scott.List
      Equiv
      Test.Function
      Cards
